vivaldi: fix cutoff on fonts in urlbar

--- a/vivaldi/custom.css
+++ b/vivaldi/custom.css
@@ -169,3 +169,6 @@
 .UrlFragment-Wrapper, .UrlBar-UrlField, #urlFieldInput {
 	font-size: 13.5px
 }
+.UrlBar-UrlField, #urlFieldInput {
+	height: min-content;
+}
